--- a/src/scss/frontend--style.scss
+++ b/src/scss/frontend--style.scss
@@ -2,30 +2,30 @@
 @import '../ui/scss/_functions.scss';
 
 :root {
-	@include getColors(#D21C4B, "primary");
+	@include getColors(#14A9F6, "primary");
 	@include getColors(#CE9B44, "sec");
-	@include getColors(#0092E4, "blue");
+	@include getColors(#14A9F6, "blue");
 	@include getColors(#FF9820, "yellow");
 	@include getColors(#31A043, "green");
 	@include getColors(#EB5757, "red");
 	@include getColors(#828A99, "icon");
 	@include getColors(#333333, "text");
 
-	--bg1: #E9EAEC;
+	--bg1: #ffffff;
 	--bg2: #F4F5F6;
-	--bg3: #FFFFFF;
+	--bg3: #F5F5F5;
 
 	--spacing: 4px;
 
-	--radius-small : 4px;
-	--radius-middle: 8px;
-	--radius-large : 12px;
+	--radius-small: 8px;
+	--radius-middle: 12px;
+	--radius-large: 16px;
 
 	--media-lg: #{$lg};
 	--media-md: #{$md};
 	--media-sm: #{$sm};
 
-	--font-base: 'Roboto', Arial, Helvetica, sans-serif;
+	--font-base: 'SF Pro Display', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
 	--zi-l1: 321;
 	--zi-l2: 322;
@@ -41,19 +41,21 @@
 [data-theme="dark"] {
 	@include getColors(#ffffff, text);
 
-	--bg1: #181818;
+	--bg1: #242422;
 	--bg2: #282828;
 	--bg3: #323232;
 }
 
 body {
-	color         : var(--color-text);
-	min-height    : 100vh;
-	display       : flex;
+	color: var(--color-text);
+	min-height: 100vh;
+	display: flex;
 	flex-direction: column;
+	background: var(--bg1);
 
 	* {
 		font-family: var(--font-base);
+		-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 	}
 
 }
@@ -71,5 +73,42 @@ body {
 
 	.active-enabled {
 		display: flex !important;
+	}
+}
+
+.root {
+	display: flex;
+	flex-direction: column;
+	flex-grow: 1;
+
+}
+
+.auth-page {
+	flex-grow: 1;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	padding: 15px;
+
+	&-form {
+		width: 320px;
+		max-width: 100%;
+	}
+}
+
+.language {
+	&-list {
+		display: flex;
+		align-items: center;
+		padding-top: 34px;
+		border-top: 1px solid #D7D7D7;
+		margin-top: 92px;
+
+		&-item {
+			&+& {
+				margin-left: 22px;
+			}
+		}
 	}
 }
