--- a/src/ui/scss/Btn.scss
+++ b/src/ui/scss/Btn.scss
@@ -30,7 +30,7 @@
 	align-items    : center;
 	justify-content: center;
 
-	--size       : 52px;
+	--size       : 42px;
 	height       : var(--size);
 	padding      : 0 calc(var(--size) / 2);
 	border-radius: var(--radius-small);
@@ -74,12 +74,18 @@
 
 	// size
 	&-large {
-		--size   : 60px;
+		--size   : 52px;
 		font-size: 18px;
+		border-radius: var(--radius-middle);
 	}
 
 	&-small {
-		--size   : 40px;
+		--size   : 36px;
+		font-size: 14px;
+	}
+
+	&-xsmall {
+		--size   : 28px;
 		font-size: 14px;
 	}
 
@@ -197,7 +203,7 @@
 
 	&--white-bg {
 		background: var(--bg3);
-		box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.12);
+		// box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.12);
 
 		@media(hover) {
 			&:hover {
