--- a/src/ui/scss/Form.scss
+++ b/src/ui/scss/Form.scss
@@ -32,7 +32,7 @@
 	&-input {
 		outline: none !important;
 		display: flex;
-		height: 52px;
+		height: 42px;
 		position: relative;
 		padding: calc(var(--spacing) * 2) calc(var(--spacing) * 4);
 		flex-grow: 1;
@@ -47,7 +47,7 @@
 		font-family: var(--font-base);
 		color: var(--color-text);
 
-		background-color: var(--bg1);
+		background-color: rgba(0, 0, 0, 0);
 		border: 1px solid var(--color-text-10);
 
 		&:first-of-type {
@@ -93,6 +93,10 @@
 			pointer-events: none;
 		}
 
+		&-large{
+			height: 52px;
+			border-radius: var(--radius-middle);
+		}
 
 
 		&.active {
