add pages; start adaptive

--- a/src/includes/header.html
+++ b/src/includes/header.html
@@ -1,4 +1,9 @@
 <header class="header">
+  <button class="btn btn--primary header-burger btn-icon" data-toggle-link="sidebar">
+    <svg class="icon">
+      <use xlink:href="img/icons.svg#menu" />
+    </svg>
+  </button>
   <div class="header-info">
     <svg class="icon color-primary text-h6 mr-2">
       <use xlink:href="img/icons.svg#wallet" />
