--- a/src/includes/sidebar.html
+++ b/src/includes/sidebar.html
@@ -1,4 +1,4 @@
-<aside class="sidebar">
+<aside class="sidebar" id="sidebar">
   <button class="btn btn--primary btn--fill w-100 mb-10">Пополнить баланс</button>
 
   <div class="sidebar-info">
@@ -134,3 +134,4 @@
     </div>
   </label>
 </aside>
+<div class="sidebar-shadow"></div>
