--- a/src/ui/scss/_variables.scss
+++ b/src/ui/scss/_variables.scss
@@ -1,4 +1,6 @@
 // out: false
-$sm   : 425.98px;
-$md   : 679.98px;
-$lg   : 1053.98px;
+$sm : 425.98px;
+$md : 679.98px;
+$ul: 1999.98px;
+$xl: 1663.98px;
+$lg: 1399.98px;
