--- a/src/scss/frontend--style.scss
+++ b/src/scss/frontend--style.scss
@@ -1,10 +1,13 @@
 @import '../ui/scss/_variables.scss';
 @import '../ui/scss/_functions.scss';
 
+
+
+
 :root {
 	@include getColors(#14A9F6, "primary");
 	@include getColors(#CE9B44, "sec");
-	@include getColors(#14A9F6, "blue");
+	@include getColors(#246EDD, "blue");
 	@include getColors(#FF9820, "yellow");
 	@include getColors(#31A043, "green");
 	@include getColors(#EB5757, "red");
@@ -39,13 +42,19 @@
 
 	--header-height: 52px;
 	--sidebar-width: 300px;
-	--space-right: 200px;
-	--space-left: 96px;
+	--space-right: calc(180 * (100vw - var(--sidebar-width) - 1340px) / (96 + 180));
+	--space-left: calc(96 * (100vw - var(--sidebar-width) - 1340px) / (96 + 180));
+
+	@media(max-width:$xl) {
+		--space-left: 15px;
+		--space-right: 15px;
+	}
+
+
 }
 
 [data-theme="dark"] {
 	@include getColors(#ffffff, text);
-
 	--bg1: #242422;
 	--bg2: #282828;
 	--bg3: #323232;
@@ -180,6 +189,10 @@ body {
 	padding-left: 0;
 	padding-right: var(--space-right);
 
+	@media(max-width:$lg) {
+		padding-left: var(--space-left);
+	}
+
 	&-info {
 		display: flex;
 		align-items: center;
@@ -208,6 +221,46 @@ body {
 	background: var(--bg3);
 	border-radius: var(--radius-middle);
 	padding: 28px;
+
+
+	@media(max-width:$lg) {
+		position: fixed;
+		left: 0;
+		top: 0;
+		height: 100%;
+		overflow: auto;
+		z-index: var(--zi-l5);
+		border-radius: 0;
+		transition: .25s ease;
+
+		&:not(.toggle-active) {
+			transform: translateX(-100%);
+			opacity: 0;
+		}
+	}
+
+	&-shadow {
+		display: none;
+
+		@media(max-width:$lg) {
+			display: block;
+			position: fixed;
+			left: 0;
+			top: 0;
+			width: 100%;
+			height: 100%;
+			z-index: var(--zi-l4);
+			background: rgba(0, 0, 0, 0.5);
+			transition: .25s ease;
+
+		}
+
+	}
+
+	&:not(.toggle-active)+&-shadow {
+		opacity: 0;
+		pointer-events: none;
+	}
 
 	&-info {
 		&__item {
@@ -245,15 +298,92 @@ body {
 	width: 100%;
 	border-spacing: 0;
 	border-collapse: collapse;
+	border: 1px solid var(--color-text-10);
 
+	&-row {}
 
 	&-cell {
 		padding: 12px 4px;
-		border: 1px solid var(--color-text-20);
+		border: 1px solid var(--color-text-10);
+
+
 	}
+
+	// &-head:first-of-type &-row:first-of-type &-cell:first-of-type {
+	// 	border-top-left-radius: 4px;
+
+	// }
 
 	&-head &-cell {
 		background: var(--color-primary-20);
-		border-color: var(--color-text-10);
+	}
+
+	&-footer {}
+
+	&-footer &-cell {
+		background: var(--color-primary-20);
+
+		&:not(:first-of-type) {
+			border-left: none;
+		}
+
+		&:not(:last-of-type) {
+			border-right: none;
+		}
+	}
+}
+
+.tabs {
+	display: flex;
+	background: var(--color-primary-15);
+	border-radius: 4px;
+
+	&__item {
+		font-weight: 400;
+		padding-left: 15px;
+		padding-right: 15px;
+
+		&.active {
+			position: relative;
+			font-weight: 600;
+
+			&:before {
+				content: '';
+				position: absolute;
+				height: 3px;
+				left: 15px;
+				right: 15px;
+				bottom: 0;
+				background: var(--color-primary);
+				border-radius: 2px 2px 0 0;
+			}
+		}
+
+	}
+}
+
+.admin-header {
+	display: flex;
+	align-items: center;
+	background: var(--color-primary-20);
+	height: 42px;
+
+	&-sidebar {
+		width: var(--sidebar-width);
+		padding: 5px 30px;
+	}
+
+	&-content {
+		padding-left: var(--space-left);
+		padding-right: var(--space-right);
+	}
+
+	&-nav {
+		display: flex;
+		margin-left: -20px;
+
+		&__item {
+			padding: 10px 20px;
+		}
 	}
 }
