--- a/src/ui/scss/_functions.scss
+++ b/src/ui/scss/_functions.scss
@@ -10,6 +10,7 @@
   $darken                : darken($color, 5%);
   --color-#{$name}       : #{$color};
   --color-#{$name}-10    : rgba(#{$rgb}, 0.1);
+  --color-#{$name}-15    : rgba(#{$rgb}, 0.15);
   --color-#{$name}-20    : rgba(#{$rgb}, 0.20);
   --color-#{$name}-30    : rgba(#{$rgb}, 0.30);
   --color-#{$name}-40    : rgba(#{$rgb}, 0.40);
