--- a/src/ui/scss/_variables.scss
+++ b/src/ui/scss/_variables.scss
@@ -1,6 +1,7 @@
 // out: false
-$sm : 425.98px;
-$md : 679.98px;
-$ul: 1999.98px;
-$xl: 1663.98px;
-$lg: 1399.98px;
+$xs : 425.98px;
+$sm : 779.98px;
+$md : 1023.98px;
+$lg : 1399.98px;
+$xl : 1663.98px;
+$ul : 1999.98px;
