--- a/src/includes/header.html
+++ b/src/includes/header.html
@@ -1,14 +1,14 @@
 <header class="header">
-  <button class="btn btn--primary header-burger btn-icon" data-toggle-link="sidebar">
+  <button class="btn btn--primary header-burger btn-icon d-lg-none" data-toggle-link="sidebar">
     <svg class="icon">
       <use xlink:href="img/icons.svg#menu" />
     </svg>
   </button>
   <div class="header-info">
-    <svg class="icon color-primary text-h6 mr-2">
+    <svg class="icon color-primary text-h6 mr-2 ml-auto ml-md-0">
       <use xlink:href="img/icons.svg#wallet" />
     </svg>
-    <div class="text-body-1 text--medium">Баланс: <span class="text--demibold">743 054, 0 ₽</span></div>
+    <div class="text-body-1 text--medium"><span class="d-none d-xs-inline">Баланс:</span> <span class="text--demibold">743 054, 0 ₽</span></div>
 
     <button class="btn btn--primary btn--white-bg btn-icon ml-auto">
       <svg class="icon text-h6">
