--- a/src/includes/sidebar.html
+++ b/src/includes/sidebar.html
@@ -1,4 +1,16 @@
 <aside class="sidebar" id="sidebar">
+  <div class="flex flex-align-center d-lg-none mb-5">
+    <svg class="icon color-primary text-h6 mr-2">
+      <use xlink:href="img/icons.svg#wallet" />
+    </svg>
+    <div class="text-body-1 text--medium">Баланс: <span class="text--demibold">743 054, 0 ₽</span></div>
+
+    <button class="btn btn--primary btn--white-bg btn-icon ml-auto">
+      <svg class="icon text-h6">
+        <use xlink:href="img/icons.svg#logout" />
+      </svg>
+    </button>
+  </div>
   <button class="btn btn--primary btn--fill w-100 mb-10">Пополнить баланс</button>
 
   <div class="sidebar-info">
