--- a/src/ui/scss/_variables.scss
+++ b/src/ui/scss/_variables.scss
@@ -1,7 +1,8 @@
 // out: false
-$xs : 475.98px;
-$sm : 779.98px;
-$md : 1023.98px;
-$lg : 1399.98px;
-$xl : 1663.98px;
-$ul : 1999.98px;
+$us: 365.98px; // ultra small
+$xs : 475.98px; // extra small
+$sm : 779.98px; // small
+$md : 1023.98px; // medium
+$lg : 1399.98px; // large
+$xl : 1663.98px; // extra large
+$ul : 1999.98px; // ultra large
