--- a/src/ui/scss/Btn.scss
+++ b/src/ui/scss/Btn.scss
@@ -45,6 +45,10 @@
 	// default variant
 	color: var(--btn-color);
 
+	@media(max-width:$xs) {
+		font-size: 12px;
+	}
+
 
 	&:focus:not(:active) {
 		background: var(--btn-color-light);
@@ -74,8 +78,8 @@
 
 	// size
 	&-large {
-		--size   : 52px;
-		font-size: 18px;
+		--size       : 52px;
+		font-size    : 18px;
 		border-radius: var(--radius-middle);
 	}
 
@@ -201,12 +205,12 @@
 		}
 	}
 
-	&--underline{
+	&--underline {
 		border-bottom: 1px solid currentColor;
 	}
 
 	&--white-bg {
-		background: var(--bg3);
+		background   : var(--bg3);
 		// box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.12);
 
 		@media(hover) {
